# MyDemoCaseProjects

./: .gitignore  README.md
project/nps/data/PluginModelManager/: CMakeLists.txt  ModelManagerServer.cpp  ModelManagerServer.h  ModelViewDefine.h  PluginModelManager.qrc  PluginModelManagerModule.cpp  PluginModelManagerModule.h  TranslationTool.h
project/nps/data/PluginMonitorPanelManagerView/: CMakeLists.txt  MonitorPanelPlotServer.cpp  MonitorPanelPlotServer.h  MonitorWidget.cpp  MonitorWidget.h  PluginMonitorPanelManagerView.qrc  pluginmonitorpanelmanagerview.cpp  pluginmonitorpanelmanagerview.h  pluginmonitorpanelmanagerview_global.h
project/nps/data/PluginProjectManagerServer/: CMakeLists.txt  ProjectManagerServer.cpp  ProjectManagerServer.h  ProjectServerMng.cpp  ProjectServerMng.h  pluginprojectmanagerserver.cpp  pluginprojectmanagerserver.h  pluginprojectmanagerserver_global.h  resource.h
project/nps/data/PluginProjectManagerView/: CMakeLists.txt  DemoProjectView.cpp  DemoProjectView.h  DemoProjectView.ui  ManagerCommonWidget.cpp  ManagerCommonWidget.h  NetworkModelManagerWidget.cpp  NetworkModelManagerWidget.h  PluginProjectManagerView.cpp  PluginProjectManagerView.h  PluginProjectManagerView.qrc  ProjectManagerViewServer.cpp  ProjectManagerViewServer.h  ProjectManagerWidget.cpp  ProjectManagerWidget.h  ProjectManagerWidget.ui
project/nps/data/PluginSimuLabServer/: CMakeLists.txt  FileManager.cpp  FileManager.h  GenerateMapSchema.cpp  GenerateMapSchema.h  PluginSimuLabServer.cpp  PluginSimuLabServer.h  PluginSimuLabServer_global.h  SimuLabConst.h  SimuLabServer.cpp  SimuLabServer.h  SplitModelTools.cpp  SplitModelTools.h  postGeneratedEvent.bat
project/nps/data/PluginSimuNPSAdapter/: CMakeLists.txt  DDXTargetAdpterForBlock.cpp  DDXTargetAdpterForBlock.h  DataPackList.cpp  DataPackList.h  SimuNPSDataDictionaryContentLoader.cpp  SimuNPSDataDictionaryContentLoader.h  SimuNPSDataDictionaryServer.cpp  SimuNPSDataDictionaryServer.h  pluginsimunpsadapter.cpp  pluginsimunpsadapter.h  pluginsimunpsadapter_global.h
project/nps/graphics/GraphicsModelingKernel/: BusinessHooksServer.cpp  CMakeLists.txt  CanvasSceneDefaultImpl.cpp  CanvasSceneDefaultImpl.h  CanvasViewDefaultImpl.cpp  CanvasViewDefaultImpl.h  ClipBoardMimeData.cpp  GraphicsConfig.cpp  GraphicsConfig.h  GraphicsInputModelEdit.cpp  GraphicsInputModelEdit.h  ICanvasScene.cpp  ICanvasView.cpp  NPSPropertyManager.cpp  README.md  SimulationListItemDelegate.cpp  SimulationListItemDelegate.h  SimulationModelListView.cpp  SimulationModelListView.h  TransformItemGroup.cpp  TransformItemGroup.h  Utility.cpp  exportimage.cpp  exportimage.h  graphics_helper.bat  graphicsmodelingkernel.cpp  graphicssource.qrc  ui_exportimage.h
project/nps/graphics/PluginComponentView/: AdjustListViewWidget.cpp  AdjustListViewWidget.h  CMakeLists.txt  ComponentListDelegate.cpp  ComponentListDelegate.h  ComponentListModel.cpp  ComponentListModel.h  ConfigInfoManager.cpp  ConfigInfoManager.h  ContextMenu.cpp  ContextMenu.h  GlobalDefinition.h  ImportBlockProperty.cpp  ImportBlockProperty.h  MyListView.cpp  MyListView.h  MyToolBox.cpp  MyToolBox.h  MyToolBox.ui  PluginComponentServer.cpp  PluginComponentServer.h  PluginComponentView.cpp  PluginComponentView.h  PluginComponentView.qrc  PluginComponentView.ui  importblockproperty.ui  plugincomponentview_global.h  scrollareawidget.cpp  scrollareawidget.h  search_line_edit.cpp  search_line_edit.h  variablewidget.cpp  variablewidget.h
project/nps/graphics/PluginControlSystemGraphics/: BusBarControlGraphicsObject.cpp  BusBarControlGraphicsObject.h  CMakeLists.txt  CircleSumSourceGraphicsObject.cpp  CircleSumSourceGraphicsObject.h  ConstantSourceGraphicsObject.cpp  ConstantSourceGraphicsObject.h  ControlDataTextGraphicsObject.cpp  ControlDataTextGraphicsObject.h  ControlModulePortGraphicsObject.cpp  ControlModulePortGraphicsObject.h  ControlModuleSourceGraphicsObject.cpp  ControlModuleSourceGraphicsObject.h  ControlSVGGraphicsObject.cpp  ControlSVGGraphicsObject.h  DisplayParameterTextGraphicsObject.cpp  DisplayParameterTextGraphicsObject.h  FractionalExpressionGraphicsObject.cpp  FractionalExpressionGraphicsObject.h  GainMouduleSourceGraphicsObject.cpp  GainMouduleSourceGraphicsObject.h  GoToFromSourceGraphicsObjct.cpp  GoToFromSourceGraphicsObjct.h  InAndOutSourceGraphicsObject.cpp  InAndOutSourceGraphicsObject.h  InternalControlModuleGraphicsFactory.cpp  InternalControlModuleGraphicsFactory.h  IrRegularAnchorPortGraphics.cpp  IrRegularAnchorPortGraphics.h  IrRegularAnchorPortTextGraphics.cpp  IrRegularAnchorPortTextGraphics.h  MutiportSwitchGraphicsObject.cpp  MutiportSwitchGraphicsObject.h  SawtoothWavesGraphicsObject.cpp  SawtoothWavesGraphicsObject.h  SelftDrawSvgGraphicsObject.cpp  SelftDrawSvgGraphicsObject.h  StepSourceGraphicsObject.cpp  StepSourceGraphicsObject.h  SwitchGraphicsObject.cpp  (+7 more)
project/nps/graphics/PluginElectricalSystemGraphics/: BusBarvirtualPortGraphicsObject.cpp  BusBarvirtualPortGraphicsObject.h  CMakeLists.txt  ElectPortNameGraphics.cpp  ElectPortNameGraphics.h  ElectrialDataTextGraphicsObject.cpp  ElectrialDataTextGraphicsObject.h  ElectricalBaseBusbarObject.cpp  ElectricalBaseBusbarObject.h  ElectricalBusbarGraphicsObject.cpp  ElectricalBusbarGraphicsObject.h  ElectricalDotBusbarGraphicsObject.cpp  ElectricalDotBusbarGraphicsObject.h  ElectricalModulePortGraphicsObject.cpp  ElectricalModulePortGraphicsObject.h  ElectricalModuleSourceGraphicsObject.cpp  ElectricalModuleSourceGraphicsObject.h  ElectricalPhaseLineGraphicsObject.cpp  ElectricalPhaseLineGraphicsObject.h  ElectricalTransformProxyGraphicsObject.cpp  ElectricalTransformProxyGraphicsObject.h  InternalElectricalModuleGraphicsFactory.cpp  InternalElectricalModuleGraphicsFactory.h  defines.h  pluginelectricalsystemgraphics.cpp  pluginelectricalsystemgraphics.h  pluginelectricalsystemgraphics_global.h
project/nps/graphics/PluginGISView/: CMakeLists.txt  GISServerManager.cpp  GISServerManager.h  GISWebPage.cpp  GISWebPage.h  GISWebView.cpp  GISWebView.h  GISWorkAreaContentWidget.cpp  GISWorkAreaContentWidget.h  (+4 more)
(+1326 files in other folders)
